data/derived/sp14/progs/unify/prog2283.ml.out
Characters 111-143:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.sprintf "sine is %f " 2.0
                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
